# codecrafters-http-server-c

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
src/: main.c  request.c  request.h  string_dict.c  string_dict.h  strings.c  strings.h
tests/: request_test.c  string_dict_test.c  strings_test.c
